--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,12 +19,14 @@
     "react-dom": "^18.2.0",
     "react-router": "^6.4.3",
     "react-router-dom": "^6.4.3",
+    "react-scripts": "^5.0.1",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
+    "react-error-overlay": "6.0.9",
     "typescript": "^4.6.4",
     "vite": "^3.2.3"
   }
